# server/src/staticFiles/dto/staticFiles.dto.ts
@@ -1,0 +1,5 @@
+export class CreateStaticFileDto {
+  readonly name?: string;
+  readonly productId?: string;
+  readonly userId?: string;
+}
