# server/src/staticFiles/staticFiles.model.ts
@@ -1,0 +1,50 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { BelongsTo, Column, DataType, ForeignKey, Model, Table } from 'sequelize-typescript';
+import { Product } from 'src/products/products.model';
+import { User } from 'src/users/users.model';
+
+interface StaticFileCreationAttr {
+  name: string;
+  userId?: string;
+  productId?: string;
+}
+
+@Table({ tableName: 'static_files' })
+export class StaticFiles extends Model<StaticFiles, StaticFileCreationAttr> {
+  @ApiProperty({ example: '1', description: 'Unique id' })
+  @Column({
+    type: DataType.INTEGER,
+    unique: true,
+    autoIncrement: true,
+    primaryKey: true,
+  })
+  id: number;
+
+  @ApiProperty({ example: 'Image name', description: 'Image name desc' })
+  @Column({
+    type: DataType.STRING,
+    unique: true,
+    allowNull: false,
+  })
+  name: string;
+
+  @ForeignKey(() => Product)
+  @Column({
+    type: DataType.INTEGER,
+    allowNull: true,
+  })
+  productId: number;
+
+  @BelongsTo(() => Product)
+  product: Product;
+
+  @ForeignKey(() => User)
+  @Column({
+    type: DataType.INTEGER,
+    allowNull: true,
+  })
+  userId: number;
+
+  @BelongsTo(() => User)
+  user: User;
+}
