# server/src/staticFiles/staticFiles.module.ts
@@ -1,0 +1,9 @@
+import { Module } from '@nestjs/common';
+import { staticFilesProviders } from './staticFiles.providers';
+
+@Module({
+  exports: [],
+  controllers: [],
+  providers: [...staticFilesProviders],
+})
+export class StaticFilesModule {}
